# maru-playground

./: Makefile  README.rst  maru  pyproject.toml
maru_playground/: app.py
maru_playground/static/: ace.js  index.html  mode-maru.js  style.css
tests/: test_maru_playground.py
