[tool.poetry]
name = "maru_playground"
version = "0.1.0"
description = ""
authors = ["Maximux <fournes.maxime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
